Tell the kernel to discard USB requests when they time out.

This patch adds a call to USBDEVFS_DISCARDURB when we time out a USB
transfer. This causes the host controller to stop polling the device for
data and means that a later transfer will receive the next bytes that
are sent from the device. Otherwise those bytes will be claimed by the
cancelled transfer and discarded.

BUG=640725

Review-Url: https://codereview.chromium.org/2274343002
Cr-Commit-Position: refs/heads/master@{#414635}

Former-commit-id: 6f91bd7e250f649c06e1059033943d56dbf0a79f